# TDEI-python-lib-osw-sanitizer

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy_to_test.yml  publish_to_pypi.yml  unit_tests.yml
src/: example.py
src/osw_sanitizer/: __init__.py  config.py  result.py  sanitizer.py
tests/: test_sanitizer.py
